Add lint command
